dev/manifests/3rd-party/in-cluster-proxy/network-policy.yaml
---
# Source: in-cluster-proxy/templates/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: in-cluster-proxy-ingress
  annotations:
    pia-team.com/role: pia.k8s.in-cluster-proxy/0.6.2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: in-cluster-proxy
      app.kubernetes.io/instance: in-cluster-proxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 8080
      protocol: TCP
    - port: 8443
      protocol: TCP
---
# Source: in-cluster-proxy/templates/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: in-cluster-proxy-egress
  annotations:
    pia-team.com/role: pia.k8s.in-cluster-proxy/0.6.2
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: in-cluster-proxy
      app.kubernetes.io/instance: in-cluster-proxy
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 8080
      protocol: TCP
